@@ -1,0 +1,14 @@
+<?xml version="1.0" ?>
+
+<!-- 
+	Result row for user searching.
+-->
+
+<cite:citation xmlns="http://www.w3.org/1999/xhtml" xmlns:cite="http://eprints.org/ep3/citation" xmlns:epc="http://eprints.org/ep3/control" type="table_row">
+      <epc:print expr="action" /> on <epc:print expr="datasetid" />.<epc:print expr="objectid" />
+      at <epc:print expr="timestamp" />
+      by <epc:print expr="actor" />.
+</cite:citation>
+
+
+
